--- a/Cerit-SP/index.html
+++ b/Cerit-SP/index.html
@@ -19,10 +19,10 @@
   <![endif]-->
   	<div class="row-wide  above-header-bar">
   		<div class="row">
-            <div class="medium-3  columns  hide-for-small-only">
+            <div class="medium-6  columns  hide-for-small-only">
                 <span><a href="http://www.muni.cz">Masarykova univerzita</a></span>
             </div>
-            <div class="medium-9  columns  hide-for-small-only  text-right">
+            <div class="medium-6  columns  hide-for-small-only  text-right">
                 <span><a href="http://is.muni.cz">IS MU</a></span>
                 <span><a href="http://inet.muni.cz">INET</a></span>
                 <span><a href="#" data-dropdown="language-choice" data-options="is_hover:true">čeština<img src="images/flags/CzechRepublic.png"></a></span>
@@ -38,8 +38,24 @@
   	<div class="row-wide  top-header">
 	  	<div class="row  top-header-image">
 	      <div class="large-8  medium-9  columns">
-	      	  <a class="logo  l-top-header">&nbsp;</a>
-              <p class="title-a">Vědeckotechnický<br /><strong>park a inkubátor</strong></p>
+              <div class="row">
+                <div class="medium-4  columns">
+                  <a class="logo  l-top-header">&nbsp;</a>  
+                </div>
+                <div class="medium-8  columns">
+                  <div class="row">
+                    <div class="columns">
+                      <p class="title-a">Vědeckotechnický<br /><strong>park a inkubátor</strong></p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="columns">
+                      <a class="logo-faculty"><img src="images/logo-fi-black.svg" /></a>
+                      <a class="logo-faculty"><img src="images/logo-uvt-pecet.svg" /></a>  
+                    </div>
+                  </div>
+                </div>
+              </div>
 	      </div>
 	      <div class="large-4  medium-3  columns  hide-for-small-only">
 	      	<div class="secondary-menu">
@@ -97,7 +113,7 @@
                                     <a href="#"><span>Fotogalerie</span></a>
                                 </li>
                                 <li>
-                                    <a href="#"><span>Kontakty</span></a>
+                                    <a href="#seznam-firem"><span>Kontakty</span></a>
                                 </li>
                             </ul> 
                         </section> 
@@ -134,6 +150,7 @@
     
     <div class="row">
  	  <div class="columns">
+        <a name="seznam-firem" class="anchor"></a>
 	    <h3>Seznam firem</h3>
       </div>
       <hr />
