--- a/Cerit-SP/medailon.html
+++ b/Cerit-SP/medailon.html
@@ -38,8 +38,24 @@
   	<div class="row-wide  top-header">
 	  	<div class="row  top-header-image">
 	      <div class="large-8  medium-9  columns">
-	      	  <a class="logo  l-top-header">&nbsp;</a>
-              <p class="title-a">Vědeckotechnický<br /><strong>park a inkubátor</strong></p>
+              <div class="row">
+                <div class="medium-4  columns">
+                  <a class="logo  l-top-header">&nbsp;</a>  
+                </div>
+                <div class="medium-8  columns">
+                  <div class="row">
+                    <div class="columns">
+                      <p class="title-a">Vědeckotechnický<br /><strong>park a inkubátor</strong></p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="columns">
+                      <a class="logo-faculty"><img src="images/logo-fi-black.svg" /></a>
+                      <a class="logo-faculty"><img src="images/logo-uvt-pecet.svg" /></a>  
+                    </div>
+                  </div>
+                </div>
+              </div>
 	      </div>
 	      <div class="large-4  medium-3  columns  hide-for-small-only">
 	      	<div class="secondary-menu">
