--- a/Cerit/index.html
+++ b/Cerit/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CERIT science park | vědeckotechnický park a inkubátor Masarykovy univerzity</title>
+    <title>CERIT</title>
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="css/font-awesome.css" />
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -51,6 +51,10 @@
               </div>
         	</div>
 	      </div>
+          <div class="columns left">
+            <a class="logo-faculty"><img src="images/logo-fi-black.svg" /></a>
+            <a class="logo-faculty"><img src="images/logo-uvt-pecet.svg" /></a>
+	      </div>
 	    </div>
 	</div>
       
@@ -86,9 +90,9 @@
 					    <div class="outer r16x9  cerit-sp">
 					        <div class="inner-logo  cerit-logo">
 					        	<div class="module">
-					        		<h3>Scientific Park</h3>
+					        		<h3>Science Park</h3>
 					        	</div>
-					            <img src="res/images/logos/cerit-re.svg"/>
+					            <img src="res/images/logos/cerit-sp.svg"/>
 					        </div>
 					    </div>
 					</div>
