FSS: Opravy sekundárního menu, název fakulty do html, ladění linků na soc. sítě a vyhledávání

--- a/FSS/paticka.html
+++ b/FSS/paticka.html
@@ -54,7 +54,7 @@
 	  	<div class="row identity-row">
 	      <div class="large-10  medium-9  columns">
 	        <a href="index.html" class="faculty-tag"></a>
-	        <a href="index.html" class="faculty-tag-text"></a>
+	        <a href="index.html" class="faculty-tag-text"><img src="res/images/fac-tag-text-cs.svg" alt="Fakulta sociálních studií"></a>
 	      </div>
 	      <div class="large-2  medium-3  columns  hide-for-small-only">
               <div class="row secondary-menu">
@@ -262,7 +262,6 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/foundation/js/foundation.js"></script>
     <script src="js/foundation.mainbar.js"></script>
-    <script src="js/wc-element-query.js"></script>
       
     <script>
       // počká až je dokument ready
