--- a/FSS/typografie.html
+++ b/FSS/typografie.html
@@ -54,7 +54,7 @@
 	  	<div class="row identity-row">
 	      <div class="large-10  medium-9  columns">
 	        <a href="index.html" class="faculty-tag"></a>
-	        <a href="index.html" class="faculty-tag-text"></a>
+	        <a href="index.html" class="faculty-tag-text"><img src="res/images/fac-tag-text-cs.svg" alt="Fakulta sociálních studií"></a>
 	      </div>
 	      <div class="large-2  medium-3  columns  hide-for-small-only">
               <div class="row secondary-menu">
