--- a/FSS/index.html
+++ b/FSS/index.html
@@ -67,10 +67,10 @@
 	        <a href="index.html" class="faculty-tag"></a>
 	        <a href="index.html" class="faculty-tag-text"><img src="res/images/fac-tag-text-cs.svg" alt="Fakulta sociálních studií"></a>
 	      </div>
-	      <div class="large-2  medium-3  columns  hide-for-small-only">
+	      <div class="large-2  medium-4  columns  hide-for-small-only">
               <div class="row secondary-menu">
                 <div class="columns">
-                  <a href="#"><i class="fa fa-facebook"></i></a>&emsp;<a href="#"><i class="fa fa-twitter"></i></a>&emsp;<a href="#"><i class="fa fa-youtube"></i></a>
+                  <a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-youtube"></i></a>
                 </div>
               </div>
               <div class="row collapse search-row with-sec-menu">
